# Bluetooth-Tracker-

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: android.yml
android/: gradle.properties
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  tracker.cpp
android/app/src/main/kotlin/com/example/bt_tracker/: BluetoothReceiver.kt  LocationCaptureService.kt  MainActivity.kt  TrackerPlugin.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml
lib/: main.dart
lib/models/: last_location.dart
lib/screens/: home_screen.dart
lib/services/: tracker_service.dart
